# boai

./: .gitignore  CMakeLists.txt  README.md
cmake/: boaiConfig.cmake.in
docs/manual/: oai-completion.md
examples/: CMakeLists.txt
examples/completion/: CMakeLists.txt  completion.cc
examples/deepseek_demo/: CMakeLists.txt  deepseek_demo.cc  demo_options.cc  demo_options.h  demo_session.cc  demo_session.h  demo_tools.cc  demo_tools.h
include/boai/: boai.h
include/boai/completion/: oai_completion.h
src/completion/: oai_completion.cc  oai_completion_detail.cc  oai_completion_detail.h  oai_completion_factory.cc  oai_completion_request.cc  oai_completion_response.cc  oai_completion_state.cc
tests/: CMakeLists.txt
tests/general/completion/: CMakeLists.txt  integration_oai_completion_deepseek_test.cc  unit_oai_completion_test.cc
tests/support/: test_http_client_task.h
